force-app/main/default/objects/Account/fields/A_o_Ref_Validade__c.field-meta.xml
<CustomField>
    <fullName>A_o_Ref_Validade__c</fullName>
    <label>Ação Ref. Validade Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>