force-app/main/default/objects/Account/fields/Apoio__c.field-meta.xml
<CustomField>
    <fullName>Apoio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor de Atendimento</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>