force-app/main/default/objects/Account/fields/Atendimento_personalizado_CIEE__c.field-meta.xml
<CustomField>
    <fullName>Atendimento_personalizado_CIEE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atendimento personalizado CIEE?</label>
    <type>Checkbox</type>
</CustomField>