force-app/main/default/objects/Account/fields/ativaInativa__c.field-meta.xml
<CustomField>
    <fullName>ativaInativa__c</fullName>
    <label>Ativa / Inativa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>