force-app/main/default/objects/Account/fields/Ativos_ONE_Inclui__c.field-meta.xml
<CustomField>
    <fullName>Ativos_ONE_Inclui__c</fullName>
    <label>Ativos ONE/Inclui</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>