force-app/main/default/objects/Account/fields/BillingDistrict__c.field-meta.xml
<CustomField>
    <fullName>BillingDistrict__c</fullName>
    <label>Bairro</label>
    <length>120</length>
    <type>Text</type>
</CustomField>