force-app/main/default/objects/Account/fields/Celular__c.field-meta.xml
<CustomField>
    <fullName>Celular__c</fullName>
    <inlineHelpText>(XX) XXXXX-XXXX</inlineHelpText>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>