force-app/main/default/objects/Account/fields/CI__c.field-meta.xml
<CustomField>
    <fullName>CI__c</fullName>
    <label>CI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>