force-app/main/default/objects/Account/fields/ciAprendiz__c.field-meta.xml
<CustomField>
    <fullName>ciAprendiz__c</fullName>
    <label>CI Aprendiz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>