force-app/main/default/objects/Account/fields/ciAtual__c.field-meta.xml
<CustomField>
    <fullName>ciAtual__c</fullName>
    <label>CI Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>