force-app/main/default/objects/Account/fields/cidade__c.field-meta.xml
<CustomField>
    <fullName>cidade__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>