force-app/main/default/objects/Account/fields/ciUnica__c.field-meta.xml
<CustomField>
    <fullName>ciUnica__c</fullName>
    <label>CI Única</label>
    <length>5</length>
    <type>Text</type>
</CustomField>