force-app/main/default/objects/Account/fields/CNAE_Completo__c.field-meta.xml
<CustomField>
    <fullName>CNAE_Completo__c</fullName>
    <inlineHelpText>Copiar e colar o Código e Descrição da Atividade Econômica Principal, conforme Receita Federal.</inlineHelpText>
    <label>CNAE Completo (Código e Descrição)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>