force-app/main/default/objects/Account/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <externalId>true</externalId>
    <label>CNPJ/CPF</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>