force-app/main/default/objects/Account/fields/Codigo_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Salesforce__c</fullName>
    <displayFormat>ACC{0}</displayFormat>
    <externalId>true</externalId>
    <label>Codigo Salesforce</label>
    <type>AutoNumber</type>
</CustomField>