force-app/main/default/objects/Account/fields/codigoDoProprietarioReal__c.field-meta.xml
<CustomField>
    <fullName>codigoDoProprietarioReal__c</fullName>
    <label>Código do proprietário real</label>
    <length>10</length>
    <type>Text</type>
</CustomField>