force-app/main/default/objects/Account/fields/Como_conheceu_o_CIEE__c.field-meta.xml
<CustomField>
    <fullName>Como_conheceu_o_CIEE__c</fullName>
    <description>Campo complementar a Origem do lead para acompanhar como os leads e contas conheceram o CIEE.</description>
    <label>Como conheceu o CIEE?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrafiltros</fullName>
            </value>
            <value>
                <fullName>Anúncio na internet</fullName>
            </value>
            <value>
                <fullName>Busca na internet</fullName>
            </value>
            <value>
                <fullName>Conheceu durante a faculdade</fullName>
            </value>
            <value>
                <fullName>Contato anterior do CIEE</fullName>
            </value>
            <value>
                <fullName>CRA / SP</fullName>
            </value>
            <value>
                <fullName>Elevador</fullName>
            </value>
            <value>
                <fullName>Ex-Estagiário/Aprendiz</fullName>
            </value>
            <value>
                <fullName>Indicação de amigo/família</fullName>
            </value>
            <value>
                <fullName>Indicação de contador</fullName>
            </value>
            <value>
                <fullName>Indicação entre empresas</fullName>
            </value>
            <value>
                <fullName>Já possui convênio</fullName>
            </value>
            <value>
                <fullName>MP Educacional</fullName>
            </value>
            <value>
                <fullName>Parceria anterior em outra empresa</fullName>
            </value>
            <value>
                <fullName>Pense Contabilidade Escolar</fullName>
            </value>
            <value>
                <fullName>SIMESPI</fullName>
            </value>
            <value>
                <fullName>Sindilojas</fullName>
            </value>
            <value>
                <fullName>100 Maiores Bancos</fullName>
            </value>
            <value>
                <fullName>Parceria anterior</fullName>
                <isActive>false</isActive>
                <label>Parceria anterior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>