force-app/main/default/objects/Account/fields/Consultores__c.field-meta.xml
<CustomField>
    <fullName>Consultores__c</fullName>
    <inlineHelpText>Preencher o campo abaixo &quot;Carteira Consultor&quot;.</inlineHelpText>
    <label>Consultor(a)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unidade__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Consultores</valueSetName>
    </valueSet>
</CustomField>