force-app/main/default/objects/Account/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <externalId>true</externalId>
    <label>Convênio</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>