force-app/main/default/objects/Account/fields/decricaoDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>decricaoDaUnidade__c</fullName>
    <label>Descrição da Unidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>