force-app/main/default/objects/Account/fields/Desc_Unid__c.field-meta.xml
<CustomField>
    <fullName>Desc_Unid__c</fullName>
    <label>Desc_Unid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>