force-app/main/default/objects/Account/fields/descricaoDaUnidadeAdminstrativa__c.field-meta.xml
<CustomField>
    <fullName>descricaoDaUnidadeAdminstrativa__c</fullName>
    <label>Descrição da Unidade Administrativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>