force-app/main/default/objects/Account/fields/E_mail_do_grupo_personalizado__c.field-meta.xml
<CustomField>
    <fullName>E_mail_do_grupo_personalizado__c</fullName>
    <label>E-mail do grupo personalizado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>