force-app/main/default/objects/Account/fields/Faturamento_Hoje__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Hoje__c</fullName>
    <label>Faturamento Hoje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>