force-app/main/default/objects/Account/fields/Faturamento_Que_J_Tivemos__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Que_J_Tivemos__c</fullName>
    <label>Faturamento Que Já Tivemos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>