force-app/main/default/objects/Account/fields/Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Follow_up__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>