force-app/main/default/objects/Account/fields/Gerencia_Regional__c.field-meta.xml
<CustomField>
    <fullName>Gerencia_Regional__c</fullName>
    <label>Gerência Regional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gerencias_Regionais</valueSetName>
    </valueSet>
</CustomField>