force-app/main/default/objects/Account/fields/GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>GrupoEconomico__c</fullName>
    <label>Grupo Econômico</label>
    <length>100</length>
    <type>Text</type>
</CustomField>