force-app/main/default/objects/Account/fields/grupoEconomicoTxt__c.field-meta.xml
<CustomField>
    <fullName>grupoEconomicoTxt__c</fullName>
    <label>Grupo econômico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>