force-app/main/default/objects/Account/fields/Hierarquia_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Hierarquia_da_Conta__c</fullName>
    <label>Hierarquia da Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matriz</fullName>
            </value>
            <value>
                <fullName>Filial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>