force-app/main/default/objects/Account/fields/Id_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Id_Contrato__c</fullName>
    <label>ID Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>