force-app/main/default/objects/Account/fields/InteressePrincipal__c.field-meta.xml
<CustomField>
    <fullName>InteressePrincipal__c</fullName>
    <label>Interesse principal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprendiz</fullName>
            </value>
            <value>
                <fullName>Estágio</fullName>
            </value>
            <value>
                <fullName>Jovem Talento</fullName>
            </value>
            <value>
                <fullName>Arco em Ocupações Agrícolas</fullName>
            </value>
            <value>
                <fullName>CIEE Educação</fullName>
            </value>
            <value>
                <fullName>CIEE em Movimento</fullName>
            </value>
            <value>
                <fullName>CIEE eSports</fullName>
            </value>
            <value>
                <fullName>CIEE Global Connection (Estágio Internacional)</fullName>
            </value>
            <value>
                <fullName>CIEE One</fullName>
            </value>
            <value>
                <fullName>CIEE Saúde</fullName>
            </value>
            <value>
                <fullName>Clube CIEE+</fullName>
            </value>
            <value>
                <fullName>ExpoCIEE</fullName>
                <label>Expo CIEE</label>
            </value>
            <value>
                <fullName>Festival CIEE da Diversidade</fullName>
            </value>
            <value>
                <fullName>Hackathon</fullName>
            </value>
            <value>
                <fullName>Lab CIEE</fullName>
            </value>
            <value>
                <fullName>Programas de Inclusão</fullName>
            </value>
            <value>
                <fullName>Somos CIEE</fullName>
            </value>
            <value>
                <fullName>Jornada CIEE</fullName>
            </value>
            <value>
                <fullName>Agro/magarefe</fullName>
                <isActive>false</isActive>
                <label>Agro/magarefe</label>
            </value>
            <value>
                <fullName>Aprendiz no Agronegócio</fullName>
                <isActive>false</isActive>
                <label>Aprendiz no Agronegócio</label>
            </value>
            <value>
                <fullName>Educação/T&amp;D</fullName>
                <isActive>false</isActive>
                <label>Educação/T&amp;D</label>
            </value>
            <value>
                <fullName>Estágio - Jovem Talento</fullName>
                <isActive>false</isActive>
                <label>Estágio - Jovem Talento</label>
            </value>
            <value>
                <fullName>Estágio e Aprendiz</fullName>
                <isActive>false</isActive>
                <label>Estágio e Aprendiz</label>
            </value>
            <value>
                <fullName>Inclui</fullName>
                <isActive>false</isActive>
                <label>Inclui</label>
            </value>
            <value>
                <fullName>Outros</fullName>
                <isActive>false</isActive>
                <label>Outros</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <isActive>false</isActive>
                <label>PE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>