force-app/main/default/objects/Account/fields/ltimo_Contato_GMC_Est_gio__c.field-meta.xml
<CustomField>
    <fullName>ltimo_Contato_GMC_Est_gio__c</fullName>
    <inlineHelpText>Data do último contato com a empresa para gestão e manutenção de contratos</inlineHelpText>
    <label>Último Contato GMC (Estágio)</label>
    <type>Date</type>
</CustomField>