force-app/main/default/objects/Account/fields/Midia_UTM__c.field-meta.xml
<CustomField>
    <fullName>Midia_UTM__c</fullName>
    <label>Mídia UTM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>