force-app/main/default/objects/Account/fields/Nome_do_s_Estudante_s__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_s_Estudante_s__c</fullName>
    <inlineHelpText>Nome dos estudantes em reposição.</inlineHelpText>
    <label>Nome Estud./Cód./Data Término/Situação</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>