force-app/main/default/objects/Account/fields/nomeDoProprietarioReal__c.field-meta.xml
<CustomField>
    <fullName>nomeDoProprietarioReal__c</fullName>
    <label>Nome do proprietário real</label>
    <length>255</length>
    <type>Text</type>
</CustomField>