force-app/main/default/objects/Account/fields/Numero_de_funcionarios__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_funcionarios__c</fullName>
    <label>Número de funcionários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>