force-app/main/default/objects/Account/fields/Obs_GMC__c.field-meta.xml
<CustomField>
    <fullName>Obs_GMC__c</fullName>
    <label>Obs. GMC (Estágio)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>