force-app/main/default/objects/Account/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>