force-app/main/default/objects/Account/fields/ObservacaoDeAtencao__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoDeAtencao__c</fullName>
    <label>Observação de atenção</label>
    <type>TextArea</type>
</CustomField>