force-app/main/default/objects/Account/fields/Origem_UTM__c.field-meta.xml
<CustomField>
    <fullName>Origem_UTM__c</fullName>
    <label>Origem UTM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>