force-app/main/default/objects/Account/fields/outrosInteresses__c.field-meta.xml
<CustomField>
    <fullName>outrosInteresses__c</fullName>
    <label>Outros interesses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclui</fullName>
            </value>
            <value>
                <fullName>Aprendiz Legal</fullName>
            </value>
            <value>
                <fullName>Programa de Estágio</fullName>
            </value>
            <value>
                <fullName>CIEE em Movimento</fullName>
            </value>
            <value>
                <fullName>CIEE One</fullName>
            </value>
            <value>
                <fullName>CIEE Saber Virtual</fullName>
            </value>
            <value>
                <fullName>CIEE Saber Virtual PRO</fullName>
            </value>
            <value>
                <fullName>Copa CIEE Jovem Pan</fullName>
            </value>
            <value>
                <fullName>Expo CIEE</fullName>
            </value>
            <value>
                <fullName>Espaço de Cidadania</fullName>
            </value>
            <value>
                <fullName>Estágio Internacional</fullName>
            </value>
            <value>
                <fullName>Inclui CIEE</fullName>
            </value>
            <value>
                <fullName>Lab CIEE</fullName>
            </value>
            <value>
                <fullName>Oficinas de Cri@tividades</fullName>
            </value>
            <value>
                <fullName>Prêmio CIEE Melhores Programas de Estágio</fullName>
            </value>
            <value>
                <fullName>Somos CIEE</fullName>
            </value>
            <value>
                <fullName>Teatro CIEE</fullName>
            </value>
            <value>
                <fullName>Agro/magarefe</fullName>
                <isActive>false</isActive>
                <label>Agro/magarefe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>