force-app/main/default/objects/Account/fields/Para_uso_do_flow__c.field-meta.xml
<CustomField>
    <fullName>Para_uso_do_flow__c</fullName>
    <label>Para uso do flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>flow_aprendiz_ativa</fullName>
            </value>
            <value>
                <fullName>flow_aprendiz_aumento</fullName>
            </value>
            <value>
                <fullName>flow_aprendiz_queda</fullName>
            </value>
            <value>
                <fullName>flow_aprendiz_inativa</fullName>
            </value>
            <value>
                <fullName>flow_estagio_ativa</fullName>
            </value>
            <value>
                <fullName>flow_estagio_aumento</fullName>
            </value>
            <value>
                <fullName>flow_estagio_queda</fullName>
            </value>
            <value>
                <fullName>flow_estagio_inativa</fullName>
            </value>
            <value>
                <fullName>Negados GMC</fullName>
            </value>
            <value>
                <fullName>Correção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>