force-app/main/default/objects/Account/fields/Possui_Bloqueio__c.field-meta.xml
<CustomField>
    <fullName>Possui_Bloqueio__c</fullName>
    <label>Possui Bloqueio?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bloqueio_Debito</valueSetName>
    </valueSet>
</CustomField>