force-app/main/default/objects/Account/fields/programaAprendiz__c.field-meta.xml
<CustomField>
    <fullName>programaAprendiz__c</fullName>
    <label>Programa Aprendiz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>