force-app/main/default/objects/Account/fields/Prorroga_o_Reposi_o__c.field-meta.xml
<CustomField>
    <fullName>Prorroga_o_Reposi_o__c</fullName>
    <label>Prorrogação/Reposição?</label>
    <type>TextArea</type>
</CustomField>