force-app/main/default/objects/Account/fields/Qtdd_Prorroga_o_Negados_Central__c.field-meta.xml
<CustomField>
    <fullName>Qtdd_Prorroga_o_Negados_Central__c</fullName>
    <label>Qtdd Prorrogação Negados Central</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>