force-app/main/default/objects/Account/fields/Qtdd_Reposi_o_Aprendiz_Negados_Central__c.field-meta.xml
<CustomField>
    <fullName>Qtdd_Reposi_o_Aprendiz_Negados_Central__c</fullName>
    <label>Qtdd Reposição Aprendiz Negados Central</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>