force-app/main/default/objects/Account/fields/Qtdd_Reposi_o_Est_gio_negados_central__c.field-meta.xml
<CustomField>
    <fullName>Qtdd_Reposi_o_Est_gio_negados_central__c</fullName>
    <label>Qtdd Reposição Estágio (negados central)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>