force-app/main/default/objects/Account/fields/Qual__c.field-meta.xml
<CustomField>
    <fullName>Qual__c</fullName>
    <label>Qual concorrente?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>