force-app/main/default/objects/Account/fields/Quantidade_de_Reposi_es__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Reposi_es__c</fullName>
    <description>Quantidade de estudantes em reposição.</description>
    <inlineHelpText>Quantidade de estudantes em reposição.</inlineHelpText>
    <label>Quantidade de Reposições</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>