force-app/main/default/objects/Account/fields/Quantidade_de_Reposi_es_Aceitas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Reposi_es_Aceitas__c</fullName>
    <description>Inserir o número de reposições aceitas.</description>
    <inlineHelpText>Inserir o número de reposições aceitas.</inlineHelpText>
    <label>Quantidade de Reposições Aceitas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>