force-app/main/default/objects/Account/fields/Quantidade_de_Vagas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Vagas__c</fullName>
    <label>Quantidade de Vagas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>