force-app/main/default/objects/Account/fields/quantidadeDeAprendizesAtivos__c.field-meta.xml
<CustomField>
    <fullName>quantidadeDeAprendizesAtivos__c</fullName>
    <label>Quantidade de Aprendizes Ativos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>