force-app/main/default/objects/Account/fields/quantidadeDeDiasInativo__c.field-meta.xml
<CustomField>
    <fullName>quantidadeDeDiasInativo__c</fullName>
    <label>Quantidade de dias inativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>