force-app/main/default/objects/Account/fields/quantidadeDeEstagiarosAtivos__c.field-meta.xml
<CustomField>
    <fullName>quantidadeDeEstagiarosAtivos__c</fullName>
    <label>Quantidade de Estagiários Ativos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>